2010-06-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `slenv'.

	* deploy/installer/slenv.in: Fix typo.

2010-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor installer update.

	* deploy/installer/configure.ac: Use Automake silent rules.

2010-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor installer update.

	* deploy/installer/slenv.in: Extend PYTHONPATH. 

2010-06-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update installer version to suggest upgrading.

	* deploy/installer/build-aux/package-version: Bump to 3.1.

2010-06-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the tool chain installer.

	* deploy/installer/configure.ac: Detect `bash', make fetch command
	silent and produce its output to stdout. Fetch and use tag files
	to determine version numbers automatically.
	* deploy/installer/Makefile.am: Use tags. New target `moretags' to
	fetch all tags available centrally. Clean up better on `make
	uninstall'.
	
	* deploy/installer/slenv,
	* deploy/installer/deslenv: Rename to...
	* deploy/installer/slenv.in,
	* deploy/installer/deslenv.in: ...here. Use @BASH@. Use tags.

	* deploy/installer/configure.ac: Generate `slenv' and `deslenv'.
	* deploy/installer/rules/slenv.mk: Do not distribute them.

	* deploy/installer/rules/mgsim.mk: Avoid creating `sl-current'
	since the shortcut is now provided by tag files.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* deploy/installer/configure.ac: Require Autoconf 2.65, since we
	are using `m4_ifblank'.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* bootstrap: Properly recurse into `deploy/installer'. Create
	`data' subdirectory for livermore benchmarks before generating
	data files.

2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* deploy/dist/mgsim-dist.mk: Update check for `configure' failure.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update simulator version in installer.
